--- a/src/com/hexa/telraw/TelRaw.fxml
+++ b/src/com/hexa/telraw/TelRaw.fxml
@@ -31,7 +31,7 @@
                </HBox.margin>
             </TextField>
             <Button fx:id="btnConnect" mnemonicParsing="false" onAction="#handleBtnConnectAction" prefWidth="80.0" text="Connect" />
-            <ProgressIndicator prefHeight="13.0" prefWidth="38.0" />
+            <ProgressIndicator fx:id="pinConnect" focusTraversable="false" prefHeight="13.0" prefWidth="38.0" />
          </children>
          <VBox.margin>
             <Insets bottom="2.0" top="2.0" />
