--- a/src/com/hexa/telraw/TelRaw.fxml
+++ b/src/com/hexa/telraw/TelRaw.fxml
@@ -6,13 +6,13 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" BorderPane.alignment="CENTER" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hexa.telraw.TelRawController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="800.0" spacing="4.0" BorderPane.alignment="CENTER" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hexa.telraw.TelRawController">
   <children>
-      <HBox prefWidth="200.0">
+      <HBox alignment="CENTER_LEFT" prefWidth="200.0" spacing="4.0">
          <children>
             <Label text="Host:">
                <HBox.margin>
-                  <Insets right="4.0" />
+                  <Insets />
                </HBox.margin>
             </Label>
             <TextField fx:id="txfHost" promptText="Domain/IP" text="localhost">
@@ -22,50 +22,68 @@
             </TextField>
             <Label text="Port:">
                <HBox.margin>
-                  <Insets right="4.0" />
+                  <Insets />
                </HBox.margin>
             </Label>
             <TextField fx:id="txfPort" prefWidth="80.0" promptText="Port" text="5555">
                <HBox.margin>
-                  <Insets right="20.0" />
+                  <Insets right="10.0" />
                </HBox.margin>
             </TextField>
             <Button fx:id="btnConnect" mnemonicParsing="false" onAction="#handleBtnConnectAction" prefWidth="80.0" text="Connect" />
             <ProgressIndicator fx:id="pinConnect" focusTraversable="false" prefHeight="13.0" prefWidth="38.0" />
          </children>
          <VBox.margin>
-            <Insets bottom="2.0" top="2.0" />
+            <Insets />
          </VBox.margin>
       </HBox>
-    <SplitPane dividerPositions="0.5" prefHeight="160.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
-      <items>
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-          <children>
-                  <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                     <children>
-                        <Label text="TX:" />
-                  <TextArea fx:id="txaTx" editable="false" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" VBox.vgrow="ALWAYS" />
-                     </children>
-                  </VBox>
-          </children>
-        </AnchorPane>
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-          <children>
-                  <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                     <children>
-                        <Label text="RX:" />
-                  <TextArea fx:id="txaRx" editable="false" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" VBox.vgrow="ALWAYS" />
-                     </children>
-                  </VBox>
-          </children>
-        </AnchorPane>
-      </items>
-    </SplitPane>
-    <HBox prefHeight="100.0" prefWidth="200.0">
-      <children>
-        <TextArea fx:id="txaInput" prefHeight="200.0" HBox.hgrow="ALWAYS" />
-        <Button fx:id="btnSend" mnemonicParsing="false" onAction="#handleBtnSendAction" text="Send" />
-      </children>
-    </HBox>
+      <HBox spacing="4.0" VBox.vgrow="ALWAYS">
+         <children>
+            <ListView prefHeight="200.0" prefWidth="200.0" />
+            <VBox spacing="4.0">
+               <children>
+                <SplitPane dividerPositions="0.5" prefHeight="160.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+                  <items>
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                      <children>
+                              <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <children>
+                                    <Label text="TX:" />
+                              <TextArea fx:id="txaTx" editable="false" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" VBox.vgrow="ALWAYS" />
+                                 </children>
+                              </VBox>
+                      </children>
+                    </AnchorPane>
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                      <children>
+                              <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <children>
+                                    <Label text="RX:" />
+                              <TextArea fx:id="txaRx" editable="false" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" VBox.vgrow="ALWAYS" />
+                                 </children>
+                              </VBox>
+                      </children>
+                    </AnchorPane>
+                  </items>
+                </SplitPane>
+                <HBox prefHeight="100.0" spacing="4.0">
+                  <children>
+                    <TextArea fx:id="txaInput" prefHeight="200.0" HBox.hgrow="ALWAYS" />
+                        <VBox spacing="4.0">
+                           <children>
+                          <Button fx:id="btnSend" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleBtnSendAction" text="Send" />
+                              <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Save" />
+                              <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Clear" />
+                           </children>
+                        </VBox>
+                  </children>
+                </HBox>
+               </children>
+            </VBox>
+         </children>
+      </HBox>
   </children>
+   <padding>
+      <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
+   </padding>
 </VBox>
