--- a/src/com/hexa/telraw/TelRaw.fxml
+++ b/src/com/hexa/telraw/TelRaw.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
@@ -49,7 +50,8 @@
                               <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                  <children>
                                     <Label text="TX:" />
-                              <TextArea fx:id="txaTx" editable="false" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" VBox.vgrow="ALWAYS" />
+                              <TextArea fx:id="txaTx" editable="false" prefHeight="200.0" prefWidth="200.0" styleClass="monospace" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" VBox.vgrow="ALWAYS" />
+                                    <TextArea fx:id="txaTxChar" editable="false" prefHeight="200.0" prefWidth="200.0" styleClass="monospace" VBox.vgrow="ALWAYS" />
                                  </children>
                               </VBox>
                       </children>
@@ -59,7 +61,8 @@
                               <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                  <children>
                                     <Label text="RX:" />
-                              <TextArea fx:id="txaRx" editable="false" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" VBox.vgrow="ALWAYS" />
+                              <TextArea fx:id="txaRx" editable="false" prefHeight="200.0" prefWidth="200.0" styleClass="monospace" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" VBox.vgrow="ALWAYS" />
+                                    <TextArea fx:id="txaRxChar" editable="false" prefHeight="200.0" prefWidth="200.0" styleClass="monospace" VBox.vgrow="ALWAYS" />
                                  </children>
                               </VBox>
                       </children>
@@ -68,7 +71,7 @@
                 </SplitPane>
                 <HBox prefHeight="100.0" spacing="4.0">
                   <children>
-                    <TextArea fx:id="txaInput" prefHeight="200.0" HBox.hgrow="ALWAYS" />
+                    <TextArea fx:id="txaInput" prefHeight="200.0" styleClass="monospace" HBox.hgrow="ALWAYS" />
                         <VBox spacing="4.0">
                            <children>
                           <Button fx:id="btnSend" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleBtnSendAction" text="Send" />
