--- a/src/com/hexa/telraw/application.css
+++ b/src/com/hexa/telraw/application.css
@@ -1,1 +1,5 @@
 /* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
+.monospace {
+    -fx-font-family: "monospace";
+    -fx-font-size: 10pt;
+}
