--- a/src/com/hexa/telraw/TelRaw.fxml
+++ b/src/com/hexa/telraw/TelRaw.fxml
@@ -40,49 +40,58 @@
       </HBox>
       <HBox spacing="4.0" VBox.vgrow="ALWAYS">
          <children>
-            <ListView fx:id="ltvSnippet" onMouseClicked="#handleLtvSnippetOnMouseClicked" prefHeight="200.0" prefWidth="200.0" />
-            <VBox spacing="4.0" HBox.hgrow="ALWAYS">
-               <children>
-                <SplitPane dividerPositions="0.5" prefHeight="160.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
-                  <items>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-                      <children>
-                              <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <SplitPane dividerPositions="0.5" maxWidth="1.7976931348623157E308" HBox.hgrow="SOMETIMES">
+               <items>
+                  <ListView fx:id="ltvSnippet" maxWidth="400.0" minWidth="40.0" onMouseClicked="#handleLtvSnippetOnMouseClicked" prefWidth="200.0" SplitPane.resizableWithParent="false" />
+                  <VBox spacing="4.0">
+                     <children>
+                        <ToolBar prefHeight="40.0" prefWidth="200.0">
+                          <items>
+                            <Button fx:id="btnClearComm" mnemonicParsing="false" onAction="#handleBtnClearCommAction" text="Clear" />
+                          </items>
+                        </ToolBar>
+                      <SplitPane dividerPositions="0.5" prefHeight="160.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+                        <items>
+                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                            <children>
+                                    <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                       <children>
+                                          <Label text="TX:" />
+                                    <TextArea fx:id="txaTx" editable="false" prefHeight="200.0" prefWidth="200.0" styleClass="monospace" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" VBox.vgrow="ALWAYS" />
+                                          <TextArea fx:id="txaTxChar" editable="false" prefHeight="200.0" prefWidth="200.0" styleClass="monospace" VBox.vgrow="ALWAYS" />
+                                       </children>
+                                    </VBox>
+                            </children>
+                          </AnchorPane>
+                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                            <children>
+                                    <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                       <children>
+                                          <Label text="RX:" />
+                                    <TextArea fx:id="txaRx" editable="false" prefHeight="200.0" prefWidth="200.0" styleClass="monospace" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" VBox.vgrow="ALWAYS" />
+                                          <TextArea fx:id="txaRxChar" editable="false" prefHeight="200.0" prefWidth="200.0" styleClass="monospace" VBox.vgrow="ALWAYS" />
+                                       </children>
+                                    </VBox>
+                            </children>
+                          </AnchorPane>
+                        </items>
+                      </SplitPane>
+                      <HBox prefHeight="100.0" spacing="4.0">
+                        <children>
+                          <TextArea fx:id="txaInput" prefHeight="200.0" styleClass="monospace" HBox.hgrow="ALWAYS" />
+                              <VBox spacing="4.0">
                                  <children>
-                                    <Label text="TX:" />
-                              <TextArea fx:id="txaTx" editable="false" prefHeight="200.0" prefWidth="200.0" styleClass="monospace" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" VBox.vgrow="ALWAYS" />
-                                    <TextArea fx:id="txaTxChar" editable="false" prefHeight="200.0" prefWidth="200.0" styleClass="monospace" VBox.vgrow="ALWAYS" />
+                                <Button fx:id="btnSend" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleBtnSendAction" text="Send" />
+                                    <Button fx:id="btnSave" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleBtnSaveAction" text="Save" />
+                                    <Button fx:id="btnClearInput" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleBtnClearInputAction" text="Clear" />
                                  </children>
                               </VBox>
-                      </children>
-                    </AnchorPane>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-                      <children>
-                              <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                 <children>
-                                    <Label text="RX:" />
-                              <TextArea fx:id="txaRx" editable="false" prefHeight="200.0" prefWidth="200.0" styleClass="monospace" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" VBox.vgrow="ALWAYS" />
-                                    <TextArea fx:id="txaRxChar" editable="false" prefHeight="200.0" prefWidth="200.0" styleClass="monospace" VBox.vgrow="ALWAYS" />
-                                 </children>
-                              </VBox>
-                      </children>
-                    </AnchorPane>
-                  </items>
-                </SplitPane>
-                <HBox prefHeight="100.0" spacing="4.0">
-                  <children>
-                    <TextArea fx:id="txaInput" prefHeight="200.0" styleClass="monospace" HBox.hgrow="ALWAYS" />
-                        <VBox spacing="4.0">
-                           <children>
-                          <Button fx:id="btnSend" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleBtnSendAction" text="Send" />
-                              <Button fx:id="btnSave" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleBtnSaveAction" text="Save" />
-                              <Button fx:id="btnClear" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleBtnClearAction" text="Clear" />
-                           </children>
-                        </VBox>
-                  </children>
-                </HBox>
-               </children>
-            </VBox>
+                        </children>
+                      </HBox>
+                     </children>
+                  </VBox>
+               </items>
+            </SplitPane>
          </children>
       </HBox>
   </children>
